parser.output
Nonterminals useless in grammar

    member_list
    member


Rules useless in grammar

   64 member_list: member_list member
   65            | ε

   66 member: type T_ID ';'


State 78 conflicts: 1 shift/reduce
State 80 conflicts: 1 shift/reduce
State 105 conflicts: 1 shift/reduce
State 106 conflicts: 1 shift/reduce
State 107 conflicts: 1 shift/reduce
State 108 conflicts: 1 shift/reduce
State 109 conflicts: 1 shift/reduce
State 110 conflicts: 1 shift/reduce
State 111 conflicts: 1 shift/reduce
State 112 conflicts: 1 shift/reduce
State 113 conflicts: 1 shift/reduce
State 133 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class class_list
    3           | class

    4 class: T_ID '{' declaration_list method_list '}'
    5      | T_ID T_EXTENDS T_ID '{' declaration_list method_list '}'

    6 method_list: method method_list
    7            | ε

    8 method: T_ID '(' parameter_list ')' T_ARROW return_type '{' method_body '}'

    9 parameter_list: ε
   10               | parameter_list_nempty

   11 parameter_list_nempty: parameter
   12                      | parameter ',' parameter_list_nempty

   13 parameter: type T_ID

   14 method_body: declaration_list statement_list return_statement

   15 declaration_list: declaration_list declaration
   16                 | ε

   17 declaration: type identifier_list ';'

   18 identifier_list: T_ID
   19                | T_ID ',' identifier_list

   20 statement_list: ε
   21               | statement statement_list

   22 statement: T_ID '=' expression ';'
   23          | T_ID '.' T_ID '=' expression ';'
   24          | method_call ';'
   25          | T_IF expression '{' statement statement_list '}'
   26          | T_IF expression '{' statement statement_list '}' T_ELSE '{' statement statement_list '}'
   27          | T_WHILE expression '{' statement statement_list '}'
   28          | T_DO '{' statement statement_list '}' T_WHILE '(' expression ')' ';'
   29          | T_PRINT expression ';'

   30 method_call: T_ID '.' T_ID '(' argument_list ')'
   31            | T_ID '(' argument_list ')'

   32 return_statement: ε
   33                 | T_RETURN expression ';'

   34 expression: expression '+' expression
   35           | expression '-' expression
   36           | expression '*' expression
   37           | expression '/' expression
   38           | expression '>' expression
   39           | expression T_GEQ expression
   40           | expression T_EQ expression
   41           | expression T_AND expression
   42           | expression T_OR expression
   43           | T_NOT expression
   44           | expression '?' expression ':' expression
   45           | '-' expression
   46           | T_ID
   47           | T_ID '.' T_ID
   48           | '(' expression ')'
   49           | T_INTCONST
   50           | T_TRUE
   51           | T_FALSE
   52           | T_NEW T_ID
   53           | T_NEW T_ID '(' argument_list ')'
   54           | method_call

   55 argument_list: ε
   56              | argument_list_nempty

   57 argument_list_nempty: expression ',' argument_list_nempty
   58                     | expression

   59 type: T_INT
   60     | T_BOOLEAN
   61     | T_ID

   62 return_type: type
   63            | T_NONE


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 8 28 30 31 48 53
    ')' (41) 8 28 30 31 48 53
    '*' (42) 36
    '+' (43) 34
    ',' (44) 12 19 57
    '-' (45) 35 45
    '.' (46) 23 30 47
    '/' (47) 37
    ':' (58) 44
    ';' (59) 17 22 23 24 28 29 33
    '=' (61) 22 23
    '>' (62) 38
    '?' (63) 44
    '{' (123) 4 5 8 25 26 27 28
    '}' (125) 4 5 8 25 26 27 28
    error (256)
    T_PRINT (258) 29
    T_RETURN (259) 33
    T_IF (260) 25 26
    T_ELSE (261) 26
    T_WHILE (262) 27 28
    T_DO (263) 28
    T_EXTENDS (264) 5
    T_NEW (265) 52 53
    T_AND (266) 41
    T_OR (267) 42
    T_NOT (268) 43
    T_GEQ (269) 39
    T_EQ (270) 40
    T_ARROW (271) 8
    T_INT (272) 59
    T_BOOLEAN (273) 60
    T_NONE (274) 63
    T_TRUE (275) 50
    T_FALSE (276) 51
    T_ID <identifier_ptr> (277) 4 5 8 13 18 19 22 23 30 31 46 47 52 53 61
    T_INTCONST <integer_ptr> (278) 49
    T_UMINUS (279)


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    program <program_ptr> (41)
        on left: 1
        on right: 0
    class_list <class_list_ptr> (42)
        on left: 2 3
        on right: 1 2
    class <class_ptr> (43)
        on left: 4 5
        on right: 2 3
    method_list <method_list_ptr> (44)
        on left: 6 7
        on right: 4 5 6
    method <method_ptr> (45)
        on left: 8
        on right: 6
    parameter_list <parameter_list_ptr> (46)
        on left: 9 10
        on right: 8
    parameter_list_nempty <parameter_list_ptr> (47)
        on left: 11 12
        on right: 10 12
    parameter <parameter_ptr> (48)
        on left: 13
        on right: 11 12
    method_body <methodbody_ptr> (49)
        on left: 14
        on right: 8
    declaration_list <declaration_list_ptr> (50)
        on left: 15 16
        on right: 4 5 14 15
    declaration <declaration_ptr> (51)
        on left: 17
        on right: 15
    identifier_list <identifier_list_ptr> (52)
        on left: 18 19
        on right: 17 19
    statement_list <statement_list_ptr> (53)
        on left: 20 21
        on right: 14 21 25 26 27 28
    statement <statement_ptr> (54)
        on left: 22 23 24 25 26 27 28 29
        on right: 21 25 26 27 28
    method_call <methodcall_ptr> (55)
        on left: 30 31
        on right: 24 54
    return_statement <returnstatement_ptr> (56)
        on left: 32 33
        on right: 14
    expression <expression_ptr> (57)
        on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
        on right: 22 23 25 26 27 28 29 33 34 35 36 37 38 39 40 41 42 43 44 45 48 57 58
    argument_list <expression_list_ptr> (58)
        on left: 55 56
        on right: 30 31 53
    argument_list_nempty <expression_list_ptr> (59)
        on left: 57 58
        on right: 56 57
    type <type_ptr> (60)
        on left: 59 60 61
        on right: 13 17 62
    return_type <type_ptr> (61)
        on left: 62 63
        on right: 8


State 0

    0 $accept: • program $end

    T_ID  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: T_ID • '{' declaration_list method_list '}'
    5      | T_ID • T_EXTENDS T_ID '{' declaration_list method_list '}'

    T_EXTENDS  shift, and go to state 5
    '{'        shift, and go to state 6


State 2

    0 $accept: program • $end

    $end  shift, and go to state 7


State 3

    1 program: class_list •

    $default  reduce using rule 1 (program)


State 4

    2 class_list: class • class_list
    3           | class •

    T_ID  shift, and go to state 1

    $default  reduce using rule 3 (class_list)

    class_list  go to state 8
    class       go to state 4


State 5

    5 class: T_ID T_EXTENDS • T_ID '{' declaration_list method_list '}'

    T_ID  shift, and go to state 9


State 6

    4 class: T_ID '{' • declaration_list method_list '}'

    $default  reduce using rule 16 (declaration_list)

    declaration_list  go to state 10


State 7

    0 $accept: program $end •

    $default  accept


State 8

    2 class_list: class class_list •

    $default  reduce using rule 2 (class_list)


State 9

    5 class: T_ID T_EXTENDS T_ID • '{' declaration_list method_list '}'

    '{'  shift, and go to state 11


State 10

    4 class: T_ID '{' declaration_list • method_list '}'
   15 declaration_list: declaration_list • declaration

    T_INT      shift, and go to state 12
    T_BOOLEAN  shift, and go to state 13
    T_ID       shift, and go to state 14

    $default  reduce using rule 7 (method_list)

    method_list  go to state 15
    method       go to state 16
    declaration  go to state 17
    type         go to state 18


State 11

    5 class: T_ID T_EXTENDS T_ID '{' • declaration_list method_list '}'

    $default  reduce using rule 16 (declaration_list)

    declaration_list  go to state 19


State 12

   59 type: T_INT •

    $default  reduce using rule 59 (type)


State 13

   60 type: T_BOOLEAN •

    $default  reduce using rule 60 (type)


State 14

    8 method: T_ID • '(' parameter_list ')' T_ARROW return_type '{' method_body '}'
   61 type: T_ID •

    '('  shift, and go to state 20

    $default  reduce using rule 61 (type)


State 15

    4 class: T_ID '{' declaration_list method_list • '}'

    '}'  shift, and go to state 21


State 16

    6 method_list: method • method_list

    T_ID  shift, and go to state 22

    $default  reduce using rule 7 (method_list)

    method_list  go to state 23
    method       go to state 16


State 17

   15 declaration_list: declaration_list declaration •

    $default  reduce using rule 15 (declaration_list)


State 18

   17 declaration: type • identifier_list ';'

    T_ID  shift, and go to state 24

    identifier_list  go to state 25


State 19

    5 class: T_ID T_EXTENDS T_ID '{' declaration_list • method_list '}'
   15 declaration_list: declaration_list • declaration

    T_INT      shift, and go to state 12
    T_BOOLEAN  shift, and go to state 13
    T_ID       shift, and go to state 14

    $default  reduce using rule 7 (method_list)

    method_list  go to state 26
    method       go to state 16
    declaration  go to state 17
    type         go to state 18


State 20

    8 method: T_ID '(' • parameter_list ')' T_ARROW return_type '{' method_body '}'

    T_INT      shift, and go to state 12
    T_BOOLEAN  shift, and go to state 13
    T_ID       shift, and go to state 27

    $default  reduce using rule 9 (parameter_list)

    parameter_list         go to state 28
    parameter_list_nempty  go to state 29
    parameter              go to state 30
    type                   go to state 31


State 21

    4 class: T_ID '{' declaration_list method_list '}' •

    $default  reduce using rule 4 (class)


State 22

    8 method: T_ID • '(' parameter_list ')' T_ARROW return_type '{' method_body '}'

    '('  shift, and go to state 20


State 23

    6 method_list: method method_list •

    $default  reduce using rule 6 (method_list)


State 24

   18 identifier_list: T_ID •
   19                | T_ID • ',' identifier_list

    ','  shift, and go to state 32

    $default  reduce using rule 18 (identifier_list)


State 25

   17 declaration: type identifier_list • ';'

    ';'  shift, and go to state 33


State 26

    5 class: T_ID T_EXTENDS T_ID '{' declaration_list method_list • '}'

    '}'  shift, and go to state 34


State 27

   61 type: T_ID •

    $default  reduce using rule 61 (type)


State 28

    8 method: T_ID '(' parameter_list • ')' T_ARROW return_type '{' method_body '}'

    ')'  shift, and go to state 35


State 29

   10 parameter_list: parameter_list_nempty •

    $default  reduce using rule 10 (parameter_list)


State 30

   11 parameter_list_nempty: parameter •
   12                      | parameter • ',' parameter_list_nempty

    ','  shift, and go to state 36

    $default  reduce using rule 11 (parameter_list_nempty)


State 31

   13 parameter: type • T_ID

    T_ID  shift, and go to state 37


State 32

   19 identifier_list: T_ID ',' • identifier_list

    T_ID  shift, and go to state 24

    identifier_list  go to state 38


State 33

   17 declaration: type identifier_list ';' •

    $default  reduce using rule 17 (declaration)


State 34

    5 class: T_ID T_EXTENDS T_ID '{' declaration_list method_list '}' •

    $default  reduce using rule 5 (class)


State 35

    8 method: T_ID '(' parameter_list ')' • T_ARROW return_type '{' method_body '}'

    T_ARROW  shift, and go to state 39


State 36

   12 parameter_list_nempty: parameter ',' • parameter_list_nempty

    T_INT      shift, and go to state 12
    T_BOOLEAN  shift, and go to state 13
    T_ID       shift, and go to state 27

    parameter_list_nempty  go to state 40
    parameter              go to state 30
    type                   go to state 31


State 37

   13 parameter: type T_ID •

    $default  reduce using rule 13 (parameter)


State 38

   19 identifier_list: T_ID ',' identifier_list •

    $default  reduce using rule 19 (identifier_list)


State 39

    8 method: T_ID '(' parameter_list ')' T_ARROW • return_type '{' method_body '}'

    T_INT      shift, and go to state 12
    T_BOOLEAN  shift, and go to state 13
    T_NONE     shift, and go to state 41
    T_ID       shift, and go to state 27

    type         go to state 42
    return_type  go to state 43


State 40

   12 parameter_list_nempty: parameter ',' parameter_list_nempty •

    $default  reduce using rule 12 (parameter_list_nempty)


State 41

   63 return_type: T_NONE •

    $default  reduce using rule 63 (return_type)


State 42

   62 return_type: type •

    $default  reduce using rule 62 (return_type)


State 43

    8 method: T_ID '(' parameter_list ')' T_ARROW return_type • '{' method_body '}'

    '{'  shift, and go to state 44


State 44

    8 method: T_ID '(' parameter_list ')' T_ARROW return_type '{' • method_body '}'

    $default  reduce using rule 16 (declaration_list)

    method_body       go to state 45
    declaration_list  go to state 46


State 45

    8 method: T_ID '(' parameter_list ')' T_ARROW return_type '{' method_body • '}'

    '}'  shift, and go to state 47


State 46

   14 method_body: declaration_list • statement_list return_statement
   15 declaration_list: declaration_list • declaration

    T_PRINT    shift, and go to state 48
    T_IF       shift, and go to state 49
    T_WHILE    shift, and go to state 50
    T_DO       shift, and go to state 51
    T_INT      shift, and go to state 12
    T_BOOLEAN  shift, and go to state 13
    T_ID       shift, and go to state 52

    $default  reduce using rule 20 (statement_list)

    declaration     go to state 17
    statement_list  go to state 53
    statement       go to state 54
    method_call     go to state 55
    type            go to state 18


State 47

    8 method: T_ID '(' parameter_list ')' T_ARROW return_type '{' method_body '}' •

    $default  reduce using rule 8 (method)


State 48

   29 statement: T_PRINT • expression ';'

    T_NEW       shift, and go to state 56
    T_NOT       shift, and go to state 57
    T_TRUE      shift, and go to state 58
    T_FALSE     shift, and go to state 59
    T_ID        shift, and go to state 60
    T_INTCONST  shift, and go to state 61
    '-'         shift, and go to state 62
    '('         shift, and go to state 63

    method_call  go to state 64
    expression   go to state 65


State 49

   25 statement: T_IF • expression '{' statement statement_list '}'
   26          | T_IF • expression '{' statement statement_list '}' T_ELSE '{' statement statement_list '}'

    T_NEW       shift, and go to state 56
    T_NOT       shift, and go to state 57
    T_TRUE      shift, and go to state 58
    T_FALSE     shift, and go to state 59
    T_ID        shift, and go to state 60
    T_INTCONST  shift, and go to state 61
    '-'         shift, and go to state 62
    '('         shift, and go to state 63

    method_call  go to state 64
    expression   go to state 66


State 50

   27 statement: T_WHILE • expression '{' statement statement_list '}'

    T_NEW       shift, and go to state 56
    T_NOT       shift, and go to state 57
    T_TRUE      shift, and go to state 58
    T_FALSE     shift, and go to state 59
    T_ID        shift, and go to state 60
    T_INTCONST  shift, and go to state 61
    '-'         shift, and go to state 62
    '('         shift, and go to state 63

    method_call  go to state 64
    expression   go to state 67


State 51

   28 statement: T_DO • '{' statement statement_list '}' T_WHILE '(' expression ')' ';'

    '{'  shift, and go to state 68


State 52

   22 statement: T_ID • '=' expression ';'
   23          | T_ID • '.' T_ID '=' expression ';'
   30 method_call: T_ID • '.' T_ID '(' argument_list ')'
   31            | T_ID • '(' argument_list ')'
   61 type: T_ID •

    '('  shift, and go to state 69
    '='  shift, and go to state 70
    '.'  shift, and go to state 71

    $default  reduce using rule 61 (type)


State 53

   14 method_body: declaration_list statement_list • return_statement

    T_RETURN  shift, and go to state 72

    $default  reduce using rule 32 (return_statement)

    return_statement  go to state 73


State 54

   21 statement_list: statement • statement_list

    T_PRINT  shift, and go to state 48
    T_IF     shift, and go to state 49
    T_WHILE  shift, and go to state 50
    T_DO     shift, and go to state 51
    T_ID     shift, and go to state 74

    $default  reduce using rule 20 (statement_list)

    statement_list  go to state 75
    statement       go to state 54
    method_call     go to state 55


State 55

   24 statement: method_call • ';'

    ';'  shift, and go to state 76


State 56

   52 expression: T_NEW • T_ID
   53           | T_NEW • T_ID '(' argument_list ')'

    T_ID  shift, and go to state 77


State 57

   43 expression: T_NOT • expression

    T_NEW       shift, and go to state 56
    T_NOT       shift, and go to state 57
    T_TRUE      shift, and go to state 58
    T_FALSE     shift, and go to state 59
    T_ID        shift, and go to state 60
    T_INTCONST  shift, and go to state 61
    '-'         shift, and go to state 62
    '('         shift, and go to state 63

    method_call  go to state 64
    expression   go to state 78


State 58

   50 expression: T_TRUE •

    $default  reduce using rule 50 (expression)


State 59

   51 expression: T_FALSE •

    $default  reduce using rule 51 (expression)


State 60

   30 method_call: T_ID • '.' T_ID '(' argument_list ')'
   31            | T_ID • '(' argument_list ')'
   46 expression: T_ID •
   47           | T_ID • '.' T_ID

    '('  shift, and go to state 69
    '.'  shift, and go to state 79

    $default  reduce using rule 46 (expression)


State 61

   49 expression: T_INTCONST •

    $default  reduce using rule 49 (expression)


State 62

   45 expression: '-' • expression

    T_NEW       shift, and go to state 56
    T_NOT       shift, and go to state 57
    T_TRUE      shift, and go to state 58
    T_FALSE     shift, and go to state 59
    T_ID        shift, and go to state 60
    T_INTCONST  shift, and go to state 61
    '-'         shift, and go to state 62
    '('         shift, and go to state 63

    method_call  go to state 64
    expression   go to state 80


State 63

   48 expression: '(' • expression ')'

    T_NEW       shift, and go to state 56
    T_NOT       shift, and go to state 57
    T_TRUE      shift, and go to state 58
    T_FALSE     shift, and go to state 59
    T_ID        shift, and go to state 60
    T_INTCONST  shift, and go to state 61
    '-'         shift, and go to state 62
    '('         shift, and go to state 63

    method_call  go to state 64
    expression   go to state 81


State 64

   54 expression: method_call •

    $default  reduce using rule 54 (expression)


State 65

   29 statement: T_PRINT expression • ';'
   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '>' expression
   39           | expression • T_GEQ expression
   40           | expression • T_EQ expression
   41           | expression • T_AND expression
   42           | expression • T_OR expression
   44           | expression • '?' expression ':' expression

    T_AND  shift, and go to state 82
    T_OR   shift, and go to state 83
    T_GEQ  shift, and go to state 84
    T_EQ   shift, and go to state 85
    '>'    shift, and go to state 86
    '+'    shift, and go to state 87
    '-'    shift, and go to state 88
    '*'    shift, and go to state 89
    '/'    shift, and go to state 90
    ';'    shift, and go to state 91
    '?'    shift, and go to state 92


State 66

   25 statement: T_IF expression • '{' statement statement_list '}'
   26          | T_IF expression • '{' statement statement_list '}' T_ELSE '{' statement statement_list '}'
   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '>' expression
   39           | expression • T_GEQ expression
   40           | expression • T_EQ expression
   41           | expression • T_AND expression
   42           | expression • T_OR expression
   44           | expression • '?' expression ':' expression

    T_AND  shift, and go to state 82
    T_OR   shift, and go to state 83
    T_GEQ  shift, and go to state 84
    T_EQ   shift, and go to state 85
    '>'    shift, and go to state 86
    '+'    shift, and go to state 87
    '-'    shift, and go to state 88
    '*'    shift, and go to state 89
    '/'    shift, and go to state 90
    '{'    shift, and go to state 93
    '?'    shift, and go to state 92


State 67

   27 statement: T_WHILE expression • '{' statement statement_list '}'
   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '>' expression
   39           | expression • T_GEQ expression
   40           | expression • T_EQ expression
   41           | expression • T_AND expression
   42           | expression • T_OR expression
   44           | expression • '?' expression ':' expression

    T_AND  shift, and go to state 82
    T_OR   shift, and go to state 83
    T_GEQ  shift, and go to state 84
    T_EQ   shift, and go to state 85
    '>'    shift, and go to state 86
    '+'    shift, and go to state 87
    '-'    shift, and go to state 88
    '*'    shift, and go to state 89
    '/'    shift, and go to state 90
    '{'    shift, and go to state 94
    '?'    shift, and go to state 92


State 68

   28 statement: T_DO '{' • statement statement_list '}' T_WHILE '(' expression ')' ';'

    T_PRINT  shift, and go to state 48
    T_IF     shift, and go to state 49
    T_WHILE  shift, and go to state 50
    T_DO     shift, and go to state 51
    T_ID     shift, and go to state 74

    statement    go to state 95
    method_call  go to state 55


State 69

   31 method_call: T_ID '(' • argument_list ')'

    T_NEW       shift, and go to state 56
    T_NOT       shift, and go to state 57
    T_TRUE      shift, and go to state 58
    T_FALSE     shift, and go to state 59
    T_ID        shift, and go to state 60
    T_INTCONST  shift, and go to state 61
    '-'         shift, and go to state 62
    '('         shift, and go to state 63

    $default  reduce using rule 55 (argument_list)

    method_call           go to state 64
    expression            go to state 96
    argument_list         go to state 97
    argument_list_nempty  go to state 98


State 70

   22 statement: T_ID '=' • expression ';'

    T_NEW       shift, and go to state 56
    T_NOT       shift, and go to state 57
    T_TRUE      shift, and go to state 58
    T_FALSE     shift, and go to state 59
    T_ID        shift, and go to state 60
    T_INTCONST  shift, and go to state 61
    '-'         shift, and go to state 62
    '('         shift, and go to state 63

    method_call  go to state 64
    expression   go to state 99


State 71

   23 statement: T_ID '.' • T_ID '=' expression ';'
   30 method_call: T_ID '.' • T_ID '(' argument_list ')'

    T_ID  shift, and go to state 100


State 72

   33 return_statement: T_RETURN • expression ';'

    T_NEW       shift, and go to state 56
    T_NOT       shift, and go to state 57
    T_TRUE      shift, and go to state 58
    T_FALSE     shift, and go to state 59
    T_ID        shift, and go to state 60
    T_INTCONST  shift, and go to state 61
    '-'         shift, and go to state 62
    '('         shift, and go to state 63

    method_call  go to state 64
    expression   go to state 101


State 73

   14 method_body: declaration_list statement_list return_statement •

    $default  reduce using rule 14 (method_body)


State 74

   22 statement: T_ID • '=' expression ';'
   23          | T_ID • '.' T_ID '=' expression ';'
   30 method_call: T_ID • '.' T_ID '(' argument_list ')'
   31            | T_ID • '(' argument_list ')'

    '('  shift, and go to state 69
    '='  shift, and go to state 70
    '.'  shift, and go to state 71


State 75

   21 statement_list: statement statement_list •

    $default  reduce using rule 21 (statement_list)


State 76

   24 statement: method_call ';' •

    $default  reduce using rule 24 (statement)


State 77

   52 expression: T_NEW T_ID •
   53           | T_NEW T_ID • '(' argument_list ')'

    '('  shift, and go to state 102

    $default  reduce using rule 52 (expression)


State 78

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '>' expression
   39           | expression • T_GEQ expression
   40           | expression • T_EQ expression
   41           | expression • T_AND expression
   42           | expression • T_OR expression
   43           | T_NOT expression •
   44           | expression • '?' expression ':' expression

    '?'  shift, and go to state 92

    '?'       [reduce using rule 43 (expression)]
    $default  reduce using rule 43 (expression)


State 79

   30 method_call: T_ID '.' • T_ID '(' argument_list ')'
   47 expression: T_ID '.' • T_ID

    T_ID  shift, and go to state 103


State 80

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '>' expression
   39           | expression • T_GEQ expression
   40           | expression • T_EQ expression
   41           | expression • T_AND expression
   42           | expression • T_OR expression
   44           | expression • '?' expression ':' expression
   45           | '-' expression •

    '?'  shift, and go to state 92

    '?'       [reduce using rule 45 (expression)]
    $default  reduce using rule 45 (expression)


State 81

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '>' expression
   39           | expression • T_GEQ expression
   40           | expression • T_EQ expression
   41           | expression • T_AND expression
   42           | expression • T_OR expression
   44           | expression • '?' expression ':' expression
   48           | '(' expression • ')'

    T_AND  shift, and go to state 82
    T_OR   shift, and go to state 83
    T_GEQ  shift, and go to state 84
    T_EQ   shift, and go to state 85
    '>'    shift, and go to state 86
    '+'    shift, and go to state 87
    '-'    shift, and go to state 88
    '*'    shift, and go to state 89
    '/'    shift, and go to state 90
    ')'    shift, and go to state 104
    '?'    shift, and go to state 92


State 82

   41 expression: expression T_AND • expression

    T_NEW       shift, and go to state 56
    T_NOT       shift, and go to state 57
    T_TRUE      shift, and go to state 58
    T_FALSE     shift, and go to state 59
    T_ID        shift, and go to state 60
    T_INTCONST  shift, and go to state 61
    '-'         shift, and go to state 62
    '('         shift, and go to state 63

    method_call  go to state 64
    expression   go to state 105


State 83

   42 expression: expression T_OR • expression

    T_NEW       shift, and go to state 56
    T_NOT       shift, and go to state 57
    T_TRUE      shift, and go to state 58
    T_FALSE     shift, and go to state 59
    T_ID        shift, and go to state 60
    T_INTCONST  shift, and go to state 61
    '-'         shift, and go to state 62
    '('         shift, and go to state 63

    method_call  go to state 64
    expression   go to state 106


State 84

   39 expression: expression T_GEQ • expression
